# beatbeatlarge

./: .gitignore  LICENSE  archive.mjs  biginfo  display.js  display.py  filter.mjs  icqa.mjs  package-lock.json  package.json  requirements.txt  save.js  workerbase.py
beatbeatlarge_rs/: .gitignore  Cargo.toml  shit
beatbeatlarge_rs/.cargo/: config
beatbeatlarge_rs/src/file_reader/: main.rs
beatbeatlarge_rs/src/redis_reader/: main.rs
beatbeatlarge_rs/src/structs/: mod.rs
logapp-frontend/: package-lock.json  package.json
logapp-frontend/src/: App.css  App.js
logapp-frontend/src/components/: Container.jsx  Header.jsx  MessageList.css  MessagesContainer.jsx  MessagesList.jsx
python/: parse.py  requirements.txt  server.py
