[package]
name = "beatbeatlarge_rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.21.2", features = ["streams"] }
mimalloc = { version = "*", default-features = false }
zstd = "0.7.0"
simdjson-rust = {git = "https://github.com/SunDoge/simdjson-rust"}
serde_json = "1.0.64"
rayon = "1.5.1"
glob = "0.3.0"

[[bin]]
name = "redis_reader"
path = "src/redis_reader/main.rs"

[[bin]]
name = "file_reader"
path = "src/file_reader/main.rs"
