[package]
name = "beatbeatlarge"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.21.2", features = ["streams"] }
mimalloc = { version = "*", default-features = false }
zstd = "0.7.0"
simdjson-rust = {git = "https://github.com/SunDoge/simdjson-rust"}
serde_json = "1.0.64"
rayon = "1.5.1"
glob = "0.3.0"
chrono = "0.4.19"
influxdb = "0.4.0"
flate2 = "1.0.20"
